# Catboost_avito_model

./: .gitignore  README.md  ee.ipynb  pyproject.toml
experiment_results/: scores.csv
models/: should_split.cbm
notebooks/: catboost_model.ipynb  pca_code.py
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
utils/: description_features_utils.py
