[project]
name = "catboost-avito"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitrii Kotik",email = "dmdoggx@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "catboost (==1.2.10)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "black[jupyter] (>=26.3.1,<27.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
